scss/_section.scss
#rollerskate,
#skateboard {

  .header {
      position: relative;
      height: 75px;
      z-index: 1;
      background: white;
    width: 100%;
  }

  .header .logo-box {
      position: absolute;
      left: 10px;
      top: 10px;
  }

  .header .logo {
    transition: transform .5s;
    
    &:hover {
      transform: rotate(360deg);
    }
  }

  .header .main-nav {
      position: absolute;
      right: 5%;
      margin: 0;
      height: 100%;
  }

  .header .main-nav > li {
      display: table;
      float: left;
      padding: 0 1.5em;
      height: 100%;
      text-transform: uppercase;
      text-align: center;
      cursor: pointer;
      background: none;
      transition: all .5s ease;
  }

  .header .main-nav > li:hover {
      background: black;
      color: white;
  }

  .header .main-nav-btn-txt {
      display: table-cell;
      vertical-align: bottom;
      height: 75px;
      font-size: 25px;
  }

  .header .main-nav > li:hover .main-nav-btn-txt  {
      height: 70px;
  }

  .content {
      position: relative;
      height: calc(100% - 75px);
  }

  .content .big-picture {
      width: 100%;
      height: 100%;
      background-repeat: no-repeat;
      background-size: cover;
      background-position: center;
      position: absolute;
  }

  .content .change-img-btn {
      position: absolute;
      width: 60px;
      height: 100%;
      top: 0;
      margin: 0;
      padding: 0;
      border: 0;
    transition: all .5s;
    color: white;
  }

  .content .change-img-btn:hover {
      background-color: rgba(0,0,0,.7);
  }

  .content .change-img-btn:active,
  .content .change-img-btn:focus{
      outline: none;
  }

  .content .prev-btn {
      background: url("../img/arrow_prev.png") no-repeat center center;
      left: 0;
  }

  .content .next-btn {
      background: url("../img/arrow_next.png") no-repeat center center;
      right: 0;
  }

  .content .bullet-points-nav {
      position: absolute;
      bottom: 10px;
      margin: 0;
      padding: 0;
      list-style: none;
      text-align: center;
      width: 100%;
      z-index: 1;
  }

  .content .bullet-points-nav > li {
      width: 10px;
      height: 10px;
      border-radius: 50%;
      background: white;
      display: inline-block;
      margin: .25em;
      cursor: pointer;
      border: 1px solid black;
  }

  .content .bullet-points-nav .bullet-on {
      background: black;
      border-color: white;
  }

  .teasing-box {
      width: 640px;
      margin: auto;
      padding: 10px;
      background: rgba(0,0,0,.7);
      position: relative;
      top: 42%;
      color: white;
      text-transform: uppercase;
      text-align: center;
      animation: teasingBoxEntrance 5s ease;
  }

  .teasing-txt {
      margin: 0;
      font-size: 25px;
  }

  .teasing-hr {
      width: 70%;
      margin: 1em auto;
  }

  @keyframes teasingBoxEntrance {
      0% {opacity: 0;}
      100% {opacity: 1;}
  }

  .info-box {
      background: rgba(0,0,0,.7);
      color: white;
      display: none;
      padding: 1em;
      z-index: 3;
      position: absolute;
      left: 50%;
      top: 0;
      width: 400px;
      height: 100%;
      text-align: justify;
    overflow: auto;
  }
  
  .info-box-large-wrapper {
    z-index: 2;
    position: absolute;
    width: 100%;
    height: 100%;
    pointer-events: none;
    
    .info-box.large {
      position: initial;
      margin: auto;
      width: auto;
      max-width: 800px;
      height: 100%;
      pointer-events: auto;
    }
  }

  .info-box > h2 {
      color: inherit;
      text-transform: uppercase;
      font-size: 25px;
      margin-bottom: 1em;
  }

  .info-box-catch-txt {
      text-transform: uppercase;
      margin-bottom: 2em;
  }

  .info-box p {
      font-size: 14px;
  }

  .info-box label {
      color: white;
  }

  .info-box textarea {
      resize: vertical;
  }
  
  .products-box {
    
  }

  .contact-box .social-links {
      margin: 1em 0;
  }

  .contact-box .social-link {
      height: 30px;
      margin: 0 4px;
    transition: transform .25s;
    
    &:hover {
      transform: translateY(-2px);
    }
      
    &:active {
      transform: translateY(0);
    }
  }

  .contact-form input[type="submit"] {
      padding: .5em 1em .3em;
      background: white;
      color: black;
      border: 1px solid black;
      float: right;
      text-transform: uppercase;
      font-weight: bold;
      font-size: 2em;
      border-radius: 2px;
      transition: all .5s ease;
    margin-top: 10px;
  }

  .contact-form input[type="submit"]:hover {
      color: white;
      background: black;
  }

  .contact-form input[type="submit"]:active {
      transform: translateY(2px);
  }

  /* adaptive screen style */

  @media screen and (max-width: 800px) {
      .info-box {
          width: 50%;
      }
  }

  @media screen and (max-width: 720px) {
      .content .change-img-btn {
          display: none;
      }
  }

  @media screen and (max-width: 640px) {
      .header .logo-box {
          width: 150px;
      }
      .header .main-nav {
          right: 0;
      }
      .teasing-box {
          width: auto;
      }
      .info-box {
          position: absolute;
          left: 0;
          top: 0;
          width: 100%;
          height: 100%;
      }
  }

  @media screen and (max-width: 480px) {
      .header .logo-box {
          width: 75px;
          left: 0;
          top: 0;
      }
      .header .main-nav > li {
          padding: 0 .5em;
      }
  }

  @media screen and (max-width: 420px) {
      body {
          width: 420px;
      }
  }

}

